--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <li>
         今後作っていきたいもの
         <ul>
-          <li><a>今後は、音を使ったゲームや、画像認識を使った作品を作りたいです。
+          <li><a>自分の音楽を使ったゲームや、AIを使ったインタラクティブ作品を作ることを目標にしています。
 </a></li>
          
         </ul>
