--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     
     <p>
       簡単な自己紹介<br>
-      まだ、しがないZEN大生です。
+      まだ、しがないZEN大生です。<br>
       今はプログラミングを勉強しながら、
-      音楽を作っています。
-      プログラミングは将来のために勉強をしています。
-      お願します。
+      音楽を作っています。<br>
+      プログラミングは将来のために勉強をしています。<br>
+      お願します。<br>
     </p>
 
     <h3>Profile</h3>
