--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
       <li><a>投資、資産運用</a></li>
       <li><a>楽曲制作</a></li>
       <li>
-        今後作っていきたいもの
+        作った作品、今後作っていきたいもの
         <ul>
           <li><a>自分の音楽を使ったゲームや、AIを使ったインタラクティブ作品を作ることを目標にしています。
 </a></li>
-         
+          <li><a href="https://example.com/">作品 2
+</a></li>
         </ul>
       </li>
     </ul>
