--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <ul>
       <li>枕叩きちゃん</li>
       <li>日本東京</li>
-      <li>楽曲作り</li>
+      <li>楽曲作りが好き</li>
     </ul>
 
     <h3>Skills</h3>
