--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>まくらたたき</h1>
-    
+    <img src="S__36003843_0.jpg" width="280">
     <h2>About</h2>
     <p>
       ドラムをたたくのが好き
