--- a/index.html
+++ b/index.html
@@ -89,5 +89,11 @@
         <td><a>イベントスタッフ</a> バイト開始</td>
       </tr>
     </
+
+      <h3>自分の曲</h3>
+    <script type="application/javascript" src="https://embed.nicovideo.jp/watch/so45516630/script?w=320&h=180"></script><noscript><a href="https://www.nicovideo.jp/watch/so45516630">恋旅路‐feat. 可不 / 可不</a></noscript>
+  </body>
+</html>
+
   </body>
 </html>
