--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
 
       <h3>自分の曲</h3>
     <script type="application/javascript" src="https://embed.nicovideo.jp/watch/so45516630/script?w=320&h=180"></script><noscript><a href="https://www.nicovideo.jp/watch/so45516630">恋旅路‐feat. 可不 / 可不</a></noscript>
-  </body>
-</html>
 
+     <h3>X(旧 Twitter)</h3>
+   <a class="twitter-timeline" data-width="400" data-height="600" data-theme="dark" href="https://twitter.com/_0x0_0m0_?ref_src=twsrc%5Etfw">Tweets by _0x0_0m0_</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    
   </body>
 </html>
